<resources>
    <string name="app_name">eSchoolManager-mobil</string>
    <string name="textBenvinguts">Benvinguts! Inicia sessió</string>
    <string name="logo_description">Logo</string>
    <string name="txt_usuari">Usuari</string>
    <string name="txt_contrasenya">Contrasenya</string>
    <string name="txt_iniciar_sessi">Iniciar Sessió</string>
    <string name="title_activity_menu_crud">MenuCRUD</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Alta nou departament: </string>
</resources>