<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLoyout_imagen"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:orientation="vertical">
           <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/logo_school"
            android:contentDescription="@string/logo_description" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLoyout_bienvenidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLoyout_imagen"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/textViewBenvinguts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alfa_slab_one"
            android:gravity="center"
            android:text="@string/textBenvinguts"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLoyout_inputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLoyout_bienvenidos"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_baseline_supervised_user_circle_24"
            app:helperText="required"
            app:counterEnabled="true"
            app:counterMaxLength="20">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputUsuari"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_usuari"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:helperText="required"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_contrasenya"
                android:password="true"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearIniciarSessio"
        android:layout_below="@id/linearLoyout_inputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <Button
            android:id="@+id/btoIniciarSessio"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:drawableEnd="@drawable/ic_baseline_login_24"
            android:drawableTint="@color/white"
            android:fontFamily="sans-serif-black"
            android:onClick="iniciSessio"
            android:text="@string/txt_iniciar_sessi" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/progressBarLinearLayout"
        android:layout_below="@id/linearIniciarSessio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible" />
    </LinearLayout>

</RelativeLayout>